--- a/SpookyToot/SpookyToot/SpookyToot.csproj
+++ b/SpookyToot/SpookyToot/SpookyToot.csproj
@@ -144,6 +144,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="GraphControl.cs" />
+    <Compile Include="GraphOverlays.cs" />
     <Compile Include="MarketStructures.cs" />
     <Compile Include="StockStructures.cs" />
     <Compile Include="YahooApiInterface.cs" />
